--- a/setup-vcenter-vms.yml
+++ b/setup-vcenter-vms.yml
@@ -4,7 +4,8 @@
     bootstrapContent : "{{ lookup('file', '{{ playbook_dir }}/install-dir/append-bootstrap.64') }}"
     masterContent : "{{ lookup('file', '{{ playbook_dir }}/install-dir/master.64') }}"
     workerContent : "{{ lookup('file', '{{ playbook_dir }}/install-dir/worker.64') }}"
-    templateName : rhcos-4.2.0-x86_64-vmware
+    #templateName : rhcos-4.2.0-x86_64-vmware
+    templateName : rhcos-4.3.0-x86_64-vmware
     folder : "/{{ vcenter.datacenter }}/vm/{{ config.clusterName }}"
     datastore: "{{ vcenter.datastore }}"
   tasks:
@@ -26,8 +27,9 @@
         validate_certs: no
         folder: "{{ folder }}"
         name: bootstrap
-        state: poweredon
-        template: bootstrap-template
+        state: poweredoff
+        #template: bootstrap-template
+        template: rhcos-4.3.0-x86_64-vmware
         disk:
         - size_gb: 16 
           type: thin
@@ -55,7 +57,7 @@
         validate_certs: no
         folder: "{{ folder }}"
         name: "{{ item.name }}"
-        state: poweredon
+        state: poweredoff
         template: "{{ item.template }}"
         disk:
         - size_gb: 16
@@ -76,9 +78,12 @@
          - key: disk.EnableUUID
            value: "TRUE"
       loop:
-        - { name : "master0", template: "master0-template"}
-        - { name : "master1", template: "master1-template"}
-        - { name : "master2", template: "master2-template"}
+        #- { name : "master0", template: "master0-template"}
+        #- { name : "master1", template: "master1-template"}
+        #- { name : "master2", template: "master2-template"}
+        - { name : "master0", template: "rhcos-4.3.0-x86_64-vmware"}
+        - { name : "master1", template: "rhcos-4.3.0-x86_64-vmware"}
+        - { name : "master2", template: "rhcos-4.3.0-x86_64-vmware"}
     - name: Create worked VMs from the template
       vmware_guest:
         hostname: "{{ vcenter.ip }}"
@@ -88,7 +93,7 @@
         validate_certs: no
         folder: "{{ folder }}"
         name: "{{ item.name }}"
-        state: poweredon
+        state: poweredoff
         template: "{{ item.template }}"
         disk:
         - size_gb: 16
@@ -109,7 +114,8 @@
          - key: disk.EnableUUID
            value: "TRUE"
       loop:
-        - { name : "worker0", template: "worker0-template"}
+        #- { name : "worker0", template: "worker0-template"}
+        - { name : "worker0", template: "rhcos-4.3.0-x86_64-vmware"}
         #- { name : "worker1", template: "worker1-template"}
         #- { name : "worker2", template: "worker2-template"}
 ...
