--- a/vars.yml.template
+++ b/vars.yml.template
@@ -24,7 +24,5 @@ vcenter:
   cluster: vmware-testcluster
   vm_network: OpenShift-Network
 download:
-  oc_client: "https://mirror.openshift.com/pub/openshift-v4/clients/ocp/4.2.13/openshift-client-linux-4.2.13.tar.gz"
-  #oc_client: "https://mirror.openshift.com/pub/openshift-v4/clients/ocp-dev-preview/latest-4.3/openshift-client-linux-4.3.0-0.nightly-2020-01-14-014012.tar.gz"
-  openshift_install: "https://mirror.openshift.com/pub/openshift-v4/clients/ocp/4.2.13/openshift-install-linux-4.2.13.tar.gz"
-  #openshift_install: "https://mirror.openshift.com/pub/openshift-v4/clients/ocp-dev-preview/latest-4.3/openshift-install-linux-4.3.0-0.nightly-2020-01-14-014012.tar.gz"
+  oc_client: "https://mirror.openshift.com/pub/openshift-v4/x86_64/clients/ocp/latest-4.3/openshift-client-linux-4.3.0.tar.gz"
+  openshift_install: "https://mirror.openshift.com/pub/openshift-v4/x86_64/clients/ocp/latest-4.3/openshift-install-linux-4.3.0.tar.gz"
