--- a/setup-vcenter-vms.yml
+++ b/setup-vcenter-vms.yml
@@ -5,7 +5,7 @@
     masterContent : "{{ lookup('file', '{{ playbook_dir }}/install-dir/master.64') }}"
     workerContent : "{{ lookup('file', '{{ playbook_dir }}/install-dir/worker.64') }}"
     templateName : rhcos-4.3.0-x86_64-vmware
-    folder : "/{{ vcenter.datacenter }}/vm/{{ config.clusterName }}"
+    folder : "/{{ vcenter.datacenter }}/vm/openshift/{{ config.clusterName }}"
     datastore: "{{ vcenter.datastore }}"
     govc_file: "/usr/local/bin/govc"
   tasks:
@@ -18,6 +18,7 @@
     - name: "Worker base64 "
       debug:
         msg: "{{ workerContent }}" 
+
     - name: Create bootstrap VM from the template
       vmware_guest:
         hostname: "{{ vcenter.ip }}"
@@ -48,6 +49,7 @@
             value: base64
           - key: disk.EnableUUID
             value: "TRUE"
+
     - name: Create master VMs from ther template
       vmware_guest:
         hostname: "{{ vcenter.ip }}"
@@ -115,9 +117,8 @@
            value: "TRUE"
       loop:
         - { name : "worker0", template: "{{ templateName }}" }
-        #- { name : "worker1", template: "worker1-template" }
-        #- { name : "worker2", template: "worker2-template" }
-        
+#        - { name : "worker1", template: "{{ templateName }}" }
+#        - { name : "worker2", template: "{{ templateName }}" }
 
     - name: Update Mac Address
       command: "{{ govc_file }} vm.network.change -net.address {{ item.mac }} -vm={{ item.name }} ethernet-0"
@@ -130,6 +131,7 @@
         GOVC_DATASTORE: "{{ vcenter.datastore }}"
         GOVC_DATACENTER: "{{ vcenter.datacenter }}"
         GOVC_CLUSTER: "{{ vcenter.cluster }}"
+        GOVC_NETWORK: "{{ vcenter.vm_network }}"
       loop:
         - { name : "bootstrap", mac: "{{ config.bootstrapmac }}" }
         - { name : "master0", mac: "{{ config.master0mac }}" }
@@ -154,12 +156,15 @@
         GOVC_DATASTORE: "{{ vcenter.datastore }}"
         GOVC_DATACENTER: "{{ vcenter.datacenter }}"
         GOVC_CLUSTER: "{{ vcenter.cluster }}"
+        GOVC_NETWORK: "{{ vcenter.vm_network }}"
       loop:
         - { name : "bootstrap" }
         - { name : "master0" }
         - { name : "master1" } 
         - { name : "master2" }
         - { name : "worker0" }
+#        - { name : "worker1" }
+#        - { name : "worker2" }
       retries: 3
       delay: 3
       register: result
