--- a/postinstall/logging/archive/clo-namespace.yml
+++ b/postinstall/logging/archive/clo-namespace.yml
@@ -1,8 +1,9 @@
 apiVersion: v1
 kind: Namespace
 metadata:
-  name: openshift-operators-redhat 
+  name: openshift-logging
   annotations:
     openshift.io/node-selector: ""
   labels:
+    openshift.io/cluster-logging: "true"
     openshift.io/cluster-monitoring: "true"
