--- a/vars.yml.template
+++ b/vars.yml.template
@@ -31,3 +31,17 @@ vcenter:
 download:
   oc_client: "https://mirror.openshift.com/pub/openshift-v4/x86_64/clients/ocp/latest-4.3/openshift-client-linux-4.3.0.tar.gz"
   openshift_install: "https://mirror.openshift.com/pub/openshift-v4/x86_64/clients/ocp/latest-4.3/openshift-install-linux-4.3.0.tar.gz"
+
+# Post Deployment Vars
+htpasswdpath: "./postinstall/users.htpasswd"
+htpasswd_name: "my_htpasswd_provider"
+htpasswd_pw: "redhat"
+htpasswd_admin_users: "admin"
+ldap_name: "my_ldap_provider"
+ldap_pw: "testuser3"
+ldap_bindDN: "uid=testuser3,ou=People,dc=example,dc=com"
+ldap_url: "ldap://helper.ocp4.lab.gsslab.pek2.redhat.com/ou=people,dc=example,dc=com?uid"
+ldap_admin_users: "testuser3"
+oc_admin_role: "cluster-admin"
+oc_app_domain: "apps.ocp4.lab.gsslab.pek2.redhat.com"
+oc_api_domain: "api.ocp4.lab.gsslab.pek2.redhat.com"
