--- a/post-install.yml
+++ b/post-install.yml
@@ -19,15 +19,16 @@
    #KUBECONFIG: /root/ocp4-vsphere-upi-automation/install-dir/auth/kubeconfig
   tasks:
 
-  - name: Get Nodes 
-    command: oc get nodes 
+  - name: Get Storage Nodes 
+    shell: oc get nodes | grep storage | awk '{print $1}'
     register: result
+    #register: storagenodes
 
   - set_fact:
-      clusternodes: "{{ result.stdout | from_yaml }}"
+      storagenodes: "{{ result.stdout | from_yaml }}"
 
   - debug:
-      msg: "{{ clusternodes }}"
+      msg: "{{ storagenodes }}"
 
   - name: Set HTPasswd
     htpasswd:
@@ -44,7 +45,7 @@
   - name: Enable the HTPasswd User
     k8s:
       state: present
-      apply: "yes" 
+      #apply: "yes" 
       definition:    
         apiVersion: config.openshift.io/v1
         kind: OAuth
@@ -103,6 +104,7 @@
   - name: Remove generic Kubeadmin User
     command: oc delete secrets kubeadmin -n kube-system
     register: result
+    ignore_errors: yes
  
  # TODO Create Base64 Template 99_masters-chrony-configuration.yml    
 
