--- a/vars.yml.template
+++ b/vars.yml.template
@@ -29,8 +29,8 @@ vcenter:
   cluster: vmware-testcluster
   vm_network: OpenShift-Network
 download:
-  oc_client: "https://mirror.openshift.com/pub/openshift-v4/x86_64/clients/ocp/latest-4.3/openshift-client-linux-4.3.0.tar.gz"
-  openshift_install: "https://mirror.openshift.com/pub/openshift-v4/x86_64/clients/ocp/latest-4.3/openshift-install-linux-4.3.0.tar.gz"
+  oc_client: "https://mirror.openshift.com/pub/openshift-v4/x86_64/clients/ocp/4.3.1/openshift-client-linux-4.3.1.tar.gz"
+  openshift_install: "https://mirror.openshift.com/pub/openshift-v4/x86_64/clients/ocp/4.3.1/openshift-install-linux-4.3.1.tar.gz"
 
 # Post Deployment Vars
 htpasswdpath: "./postinstall/users.htpasswd"
