--- a/postinstall/logging/eo-sub.yml
+++ b/postinstall/logging/eo-sub.yml
@@ -6,6 +6,7 @@ metadata:
 spec:
   channel: "4.3" 
   installPlanApproval: "Automatic"
-  source: "redhat-operators"
+  #source: "redhat-operators"
+  source: "my-redhat-operators-catalog"
   sourceNamespace: "openshift-marketplace"
   name: "elasticsearch-operator"
