--- a/postinstall/logging/cluster-logging-crd.yml
+++ b/postinstall/logging/cluster-logging-crd.yml
@@ -10,7 +10,8 @@ spec:
     elasticsearch:
       nodeCount: 3 
       storage:
-        storageClassName: ocs-storagecluster-cephfs 
+        #storageClassName: ocs-storagecluster-cephfs 
+        storageClassName: thin
         size: 20G
       redundancyPolicy: "SingleRedundancy"
   visualization:
