--- a/postinstall/logging/eo-sub.yml
+++ b/postinstall/logging/eo-sub.yml
@@ -7,6 +7,7 @@ spec:
   channel: "4.3" 
   installPlanApproval: "Automatic"
   #source: "redhat-operators"
-  source: "my-redhat-operators-catalog"
+  #source: "my-redhat-operators-catalog"
+  source: "my-operator-catalog"
   sourceNamespace: "openshift-marketplace"
   name: "elasticsearch-operator"
