--- a/vars.yml.template
+++ b/vars.yml.template
@@ -5,6 +5,7 @@ set_proxy: false
 disconnected: false
 container_registry: quay.ocp4.lab.gsslab.pek2.redhat.com:443
 ocp_release: ocp4.3.1-x86_64
+enable_ocs_storage: false
 config:
   baseDomain: ocp.example.com 
   clusterName: ocp4
