--- a/setup-vcenter-vms.yml
+++ b/setup-vcenter-vms.yml
@@ -40,7 +40,7 @@
           num_cpus: 4
           memory_reservation_lock: True
         networks:
-        - name: "{{ vcenter.vm_network }}"
+        - name: "{{ vcenter.vm_network_1 }}"
         wait_for_ip_address: no 
         customvalues:
           - key: guestinfo.ignition.config.data
@@ -75,7 +75,7 @@
           num_cpus: 4
           memory_reservation_lock: True
         networks:
-        - name: "{{ vcenter.vm_network }}"
+        - name: "{{ vcenter.vm_network_1 }}"
         wait_for_ip_address: no
         customvalues:
          - key: guestinfo.ignition.config.data
@@ -114,7 +114,7 @@
           num_cpus: 8
           memory_reservation_lock: True
         networks:
-        - name: "{{ vcenter.vm_network }}"
+        - name: "{{ vcenter.vm_network_1 }}"
         wait_for_ip_address: no
         customvalues:
          - key: guestinfo.ignition.config.data
@@ -131,6 +131,49 @@
         - { name : "worker0", template: "{{ templateName }}" }
         - { name : "worker1", template: "{{ templateName }}" }
         - { name : "worker2", template: "{{ templateName }}" }
+      when: enable_multus|bool == False
+
+    - name: Create worker VMs from the template using Multus
+      vmware_guest:
+        hostname: "{{ vcenter.ip }}"
+        username: "{{ vcenter.username }}"
+        password: "{{ vcenter.password }}"
+        datacenter: "{{ vcenter.datacenter }}"
+        cluster: "{{ vcenter.cluster }}"
+        validate_certs: no
+        folder: "{{ folder }}"
+        name: "{{ item.name }}"
+        state: poweredoff
+        template: "{{ item.template }}"
+        disk:
+        - size_gb: 16
+          type: thin
+          datastore: "{{ datastore }}"
+        hardware:
+          memory_mb: 32768
+          num_cpus: 8
+          memory_reservation_lock: True
+        networks:
+        - name: "{{ vcenter.vm_network_1 }}"
+        - name: "{{ vcenter.vm_network_2 }}"
+        - name: "{{ vcenter.vm_network_3 }}"
+        wait_for_ip_address: no
+        customvalues:
+         - key: guestinfo.ignition.config.data
+           value: "{{ workerContent }}"
+         - key: guestinfo.ignition.config.data.encoding
+           value: base64
+         - key: disk.EnableUUID
+           value: "TRUE"
+         - key: timezone
+           value: "UTC"
+         - key: hwclockUTC
+           value: "TRUE"
+      loop:
+        - { name : "worker0", template: "{{ templateName }}" }
+        - { name : "worker1", template: "{{ templateName }}" }
+        - { name : "worker2", template: "{{ templateName }}" }
+      when: enable_multus|bool == True
 
     - name: Create Storage VMs from the template
       vmware_guest:
@@ -153,7 +196,7 @@
           num_cpus: 16
           memory_reservation_lock: True
         networks:
-        - name: "{{ vcenter.vm_network }}"
+        - name: "{{ vcenter.vm_network_1 }}"
         wait_for_ip_address: no
         customvalues:
          - key: guestinfo.ignition.config.data
@@ -183,7 +226,7 @@
         GOVC_DATASTORE: "{{ vcenter.datastore }}"
         GOVC_DATACENTER: "{{ vcenter.datacenter }}"
         GOVC_CLUSTER: "{{ vcenter.cluster }}"
-        GOVC_NETWORK: "{{ vcenter.vm_network }}"
+        GOVC_NETWORK: "{{ vcenter.vm_network_1 }}"
       loop:
         - { name : "bootstrap", mac: "{{ config.bootstrapmac }}" }
         - { name : "master0", mac: "{{ config.master0mac }}" }
@@ -208,7 +251,7 @@
         GOVC_DATASTORE: "{{ vcenter.datastore }}"
         GOVC_DATACENTER: "{{ vcenter.datacenter }}"
         GOVC_CLUSTER: "{{ vcenter.cluster }}"
-        GOVC_NETWORK: "{{ vcenter.vm_network }}"
+        GOVC_NETWORK: "{{ vcenter.vm_network_1 }}"
       loop:
         - { name : "storage0", mac: "{{ config.storage0mac }}" }
         - { name : "storage1", mac: "{{ config.storage1mac }}" }
@@ -230,7 +273,7 @@
         GOVC_DATASTORE: "{{ vcenter.datastore }}"
         GOVC_DATACENTER: "{{ vcenter.datacenter }}"
         GOVC_CLUSTER: "{{ vcenter.cluster }}"
-        GOVC_NETWORK: "{{ vcenter.vm_network }}"
+        GOVC_NETWORK: "{{ vcenter.vm_network_1 }}"
       loop:
         - { name : "bootstrap" }
         - { name : "master0" }
@@ -255,7 +298,7 @@
         GOVC_DATASTORE: "{{ vcenter.datastore }}"
         GOVC_DATACENTER: "{{ vcenter.datacenter }}"
         GOVC_CLUSTER: "{{ vcenter.cluster }}"
-        GOVC_NETWORK: "{{ vcenter.vm_network }}"
+        GOVC_NETWORK: "{{ vcenter.vm_network_1 }}"
       loop:
         - { name : "storage0" }
         - { name : "storage1" }
