--- a/post-install.yml
+++ b/post-install.yml
@@ -1,52 +1,66 @@
 ---
 - hosts: localhost
   connection: local
-  vars:
-  #   htpasswdpath: "./postinstall/users.htpasswd"
-  #   htpasswd_name: "my_htpasswd_provider"
-  #   htpasswd_pw: "redhat"
-  #   htpasswd_admin_users: "admin"
-  #   ldap_name: "my_ldap_provider"
-  #   ldap_pw: "testuser3"
-  #   ldap_bindDN: "uid=testuser3,ou=People,dc=example,dc=com"
-  #   ldap_url: "ldap://helper.ocp4.lab.gsslab.pek2.redhat.com/ou=people,dc=example,dc=com?uid"
-  #   ldap_admin_users: "testuser3"
-  #   oc_admin_role: "cluster-admin"
-  #   oc_app_domain: "apps.ocp4.lab.gsslab.pek2.redhat.com"
-  #   oc_api_domain: "api.ocp4.lab.gsslab.pek2.redhat.com"
-  environment:
-   #KUBECONFIG: ./kubeconfig
-   KUBECONFIG: /root/ocp4-vsphere-upi-automation/install-dir/auth/kubeconfig
-  tasks:
 
-  - name: Get Storage Nodes 
+  vars:
+    htpasswdpath: "./postinstall/users.htpasswd"
+    htpasswd_name: "my_htpasswd_provider"
+    htpasswd_pw: "redhat"
+    htpasswd_admin_users: "admin"
+    ldap_name: "my_ldap_provider"
+    ldap_pw: "testuser3"
+    ldap_bindDN: "uid=testuser3,ou=People,dc=example,dc=com"
+    ldap_url: "ldap://helper.ocp4.lab.gsslab.pek2.redhat.com/ou=people,dc=example,dc=com?uid"
+    ldap_admin_users: "testuser3"
+    oc_admin_role: "cluster-admin"
+    oc_app_domain: "apps.ocp4.lab.gsslab.pek2.redhat.com"
+    oc_api_domain: "api.ocp4.lab.gsslab.pek2.redhat.com"
+
+  environment:
+    # KUBECONFIG: ./kubeconfig
+    KUBECONFIG: /root/ocp4-vsphere-upi-automation/install-dir/auth/kubeconfig
+
+  tasks:
+  - name: POSTINSTALL 1.0 | Get Storage Nodes
     shell: oc get nodes | grep storage | awk '{print $1}'
     register: result
-    #register: storagenodes
+    # register: storagenodes
+    tags:
+      - "1"
 
-  - set_fact:
+  - name: POSTINSTALL 1.1 | Set fact storagenodes
+    set_fact:
       storagenodes: "{{ result.stdout | from_yaml }}"
+    tags:
+      - "1"
 
-  - debug:
+  - name: POSTINSTALL 1.2 | Display the fact storagenodes
+    debug:
       msg: "{{ storagenodes }}"
+    tags:
+      - "1"
 
-  - name: Set HTPasswd
+  - name: POSTINSTALL 2.0 | Create HTPasswd file
     htpasswd:
       path: "{{ htpasswdpath }}"
       name: "{{ htpasswd_admin_users }}"
       password: "{{ htpasswd_pw }}"
       crypt_scheme: md5_crypt
     register: htpasswd
+    tags:
+      - "2"
 
-  - name: Create HTPasswd Secret
+  - name: POSTINSTALL 2.1 | Create HTPasswd Secret
     command: oc create secret generic htpass-secret --from-file=htpasswd="{{ htpasswdpath }}" -n openshift-config
     ignore_errors: yes
+    tags:
+      - "2"
 
-  - name: Enable the HTPasswd User
+  - name: POSTINSTALL 2.2 | Enable the HTPasswd User
     k8s:
       state: present
-      #apply: "yes" 
-      definition:    
+      # apply: "yes"
+      definition:
         apiVersion: config.openshift.io/v1
         kind: OAuth
         metadata:
@@ -59,17 +73,21 @@
             htpasswd:
               fileData:
                 name: htpasswd-secret
+    tags:
+      - "2"
 
-  - name: Create LDAP Secret 
+  - name: POSTINSTALL 3.0 | Create LDAP Secret
     command: oc create secret generic ldap-secret --from-file=htpasswd="{{ htpasswdpath }}" -n openshift-config
     register: result
     ignore_errors: yes
-    
-  - name: Enable the LDAP User
+    tags:
+      - "3"
+
+  - name: POSTINSTALL 3.1 | Enable the LDAP User
     k8s:
       state: present
-      #apply: "yes" 
-      definition:    
+      # apply: "yes"
+      definition:
         apiVersion: config.openshift.io/v1
         kind: OAuth
         metadata:
@@ -94,44 +112,50 @@
                 name: ldap-secret
               insecure: true
               url: "{{ ldap_url }}"
+    tags:
+      - "3"
 
-  - name: Elevate Users
+  - name: POSTINSTALL 4.0 | Elevate Users
     command: oc adm policy add-cluster-role-to-user "{{ oc_admin_role }}" "{{ item }}"
     loop:
       - "{{ htpasswd_admin_users }}"
       - "{{ ldap_admin_users }}"
+    tags:
+      - "4"
 
-  - name: Remove generic Kubeadmin User
+  - name: POSTINSTALL 5.0 | Remove generic Kubeadmin User
     command: oc delete secrets kubeadmin -n kube-system
     register: result
     ignore_errors: yes
- 
- # TODO Create Base64 Template 99_masters-chrony-configuration.yml    
+    tags:
+      - "5"
 
-# TODO STATUS oc describe co authentication | grep  -i PROGRESSING  -b1 | grep Status | awk '{print $3}'
- 
-  - name: Configure Chrony for Masters 
+  # TODO Create Base64 Template 99_masters-chrony-configuration.yml
+
+  # TODO STATUS oc describe co authentication | grep  -i PROGRESSING  -b1 | grep Status | awk '{print $3}'
+
+  - name: Configure Chrony for Masters
     k8s:
       state: present
-      apply: "yes" 
+      apply: "yes"
       src: "./postinstall/99_masters-chrony-configuration.yml"
 
-# TODO Create Base64 Template 99_masters-chrony-configuration.yml          
- 
+# TODO Create Base64 Template 99_masters-chrony-configuration.yml
+
 # TODO STATUS describe machineconfigpool master | tail -n7 | grep Ready | awk '{print $4}'
 
-  - name: Configure Chrony for Workers 
+  - name: Configure Chrony for Workers
     k8s:
       state: present
-      apply: "yes" 
+      apply: "yes"
       src: "./postinstall/99_workers-chrony-configuration.yml"
 
-# TODO Figure out how to declare storage nodes 
+# TODO Figure out how to declare storage nodes
 
-  - name: Label and Taint Storage Nodes 
+  - name: Label and Taint Storage Nodes
     command: "{{ item }}"
     register: result
-    loop: 
+    loop:
         - "oc label nodes {{ storagenodes }} cluster.ocs.openshift.io/openshift-storage='' --overwrite"
         - "oc adm taint nodes {{ storagenodes }} node.ocs.openshift.io/storage=true:NoSchedule --overwrite"
     when: enable_ocs_storage|bool == True
@@ -139,12 +163,12 @@
   - name: rain and uncordon Storage Nodes
     command: "{{ item }}"
     register: result
-    loop: 
+    loop:
         - "oc adm drain {{ storagenodes }} --ignore-daemonsets --delete-local-data"
-        - "oc adm uncordon {{ storagenodes }}" 
+        - "oc adm uncordon {{ storagenodes }}"
     when: enable_ocs_storage|bool == True
 
-  - name: Create Storage Namespace 
+  - name: Create Storage Namespace
     k8s:
       state: present
       src: "./postinstall/rhocs-namespace.yml"
@@ -159,7 +183,7 @@
   - name: Create the Storage OLM
     k8s:
       state: present
-      apply: "yes" 
+      apply: "yes"
       src: "./postinstall/ocs-olm.yml"
     when: enable_ocs_storage|bool == True
 
@@ -168,33 +192,33 @@
   - name: Create the Storage Cluster
     k8s:
       state: present
-      apply: "yes" 
+      apply: "yes"
       src: "./postinstall/ocs-StorageCluster.yml"
     when: enable_ocs_storage|bool == True
 
 # TODO STATUS oc get csv | grep ocs-operator | awk '{print $6}'
-# TODO Figure out the escape sequence 
+# TODO Figure out the escape sequence
 
-  - name: Patch the Storage cluster 
+  - name: Patch the Storage cluster
     command: "{{ item }}"
     register: result
-    loop: 
+    loop:
         - "oc patch storageclass thin -p '{\"metadata\": {\"annotations\": {\"storageclass.kubernetes.io/is-default-class\": \"false\"}}}'"
         - "oc patch storageclass ocs-storagecluster-cephfs -p '{\"metadata\": {\"annotations\": {\"storageclass.kubernetes.io/is-default-class\": \"true\"}}}'"
     when: enable_ocs_storage|bool == True
 
-  - name: Change registry Operator to "Managed" 
+  - name: Change registry Operator to "Managed"
     command: "oc patch configs.imageregistry.operator.openshift.io/cluster --type merge -p '{\"spec\":{\"managementState\": \"Managed\"}}' -n openshift-image-registry"
     register: result
 
   - name: Enable Registry PVC
     k8s:
       state: present
-      apply: "yes" 
+      apply: "yes"
       namespace: "openshift-image-registry"
       src: "./postinstall/ocs4registry-pvc.yml"
 
-  - name: Change registry Operator to "Managed" 
+  - name: Change registry Operator to "Managed"
     command: "oc patch configs.imageregistry.operator.openshift.io/cluster --type merge -p '{\"spec\":{\"storage\": {\"pvc\": {\"claim\": \"image-registry-storage\"}}}}' -n openshift-image-registry"
     register: result
 
@@ -205,19 +229,19 @@
   - name: Update the CA Cert with the Custom CA
     command: "oc patch proxy/cluster --type=merge --patch='{\"spec\":{\"trustedCA\":{\"name\":\"custom-ca\"}}}'"
     register: result
-    
-  - name: Create the Certificate Secret 
+
+  - name: Create the Certificate Secret
     command: "oc patch proxy/cluster --type=merge --patch='{\"spec\":{\"trustedCA\":{\"name\":\"custom-ca\"}}}'"
     register: result
 
-  - name: Create the Certificate Secret 
+  - name: Create the Certificate Secret
     command: "oc create secret tls {{ oc_app_domain }}.com  --cert=certs/{{ oc_app_domain }}.pem --key=certs/{{ oc_app_domain }}.key -n openshift-ingress"
     register: result
-        
+
   - name: Enable the Certificate on Ingresscontroller
     command: "oc patch ingresscontroller.operator default --type=merge -p '{\"spec\":{\"defaultCertificate\": {\"name\": \"{{ oc_app_domain }}\"}}}' -n openshift-ingress-operator"
     register: result
-    
+
   - name: Create the API Certificate
     command: "oc create secret tls {{ oc_api_domain }} --cert=certs/{{ oc_api_domain }}.pem --key=certs/{{ oc_api_domain }}.key -n openshift-config"
     register: result
@@ -229,26 +253,25 @@
   - name: Enable Monitoring Persistent Storage
     k8s:
       state: present
-      apply: "yes" 
-      src: "./postinstall/cluster-monitoring-config.yml"    
+      apply: "yes"
+      src: "./postinstall/cluster-monitoring-config.yml"
 
-  - name: Enable Cluster Logging 
+  - name: Enable Cluster Logging
     command: "{{ item }}"
     register: result
-    loop: 
+    loop:
         - "oc create -f ./postinstall/logging/eo-namespace.yml"
-        - "oc create -f ./postinstall/logging/clo-namespace.yml"       
+        - "oc create -f ./postinstall/logging/clo-namespace.yml"
         - "oc create -f ./postinstall/logging/eo-og.yml"
         - "oc create -f ./postinstall/logging/eo-sub.yml"
-        - "oc create -f ./postinstall/logging/eo-rbac.yml -n openshift-operators-redhat" 
+        - "oc create -f ./postinstall/logging/eo-rbac.yml -n openshift-operators-redhat"
         - "oc create -f ./postinstall/logging/cluster-logging-og.yml -n openshift-logging"
-        - "oc create -f ./postinstall/logging/cluster-logging-olm.yml -n openshift-logging"        
+        - "oc create -f ./postinstall/logging/cluster-logging-olm.yml -n openshift-logging"
 
-  - name: Wait for Cluster CR to appear 
+  - name: Wait for Cluster CR to appear
     command: "sleep 30"
     register: result
-                
-  - name: Create the CRD Logging 
+
+  - name: Create the CRD Logging
     command: "oc create -f ./postinstall/logging/cluster-logging-crd.yml"
     register: result
-        
